# Dynamo

./: CMakeLists.txt  dynamo.kdev4
CMake/: Dynamo.cmake  FindBoehmGC.cmake
ast/: CMakeLists.txt
ast/include/: Assignment.h  Binop.h  Break.h  Errors.h  For.h  FunctionCall.h  FunctionDecl.h  Goto.h  If.h  Label.h  Module.h  Node.h  Number.h  Pass.h  PassManager.h  Return.h  Serializer.h  Table.h  Unop.h  Value.h  Variable.h  VariableScope.h  While.h
ast/src/: Assignment.cpp  Binop.cpp  Break.cpp  For.cpp  FunctionCall.cpp  FunctionDecl.cpp  Goto.cpp  If.cpp  Label.cpp  Module.cpp  Node.cpp  Number.cpp  Pass.cpp  PassManager.cpp  Return.cpp  Table.cpp  Unop.cpp  Value.cpp  Variable.cpp  VariableScope.cpp  While.cpp
ast/test/: NodeTest.cpp
backends/lua/: CMakeLists.txt
backends/lua/lua/: arithmetic.lua  benchmark.lua  dofile.lua  fib.lua  forloop.lua  function.lua  globals.lua  if.lua  iftest.lua  operators.lua  string.lua  table.lua  whileloop.lua
backends/lua/src/: LuaDofile.hpp  LuaForLoopConversion.hpp  LuaOperatorConversion.hpp  lexer.l  parser.y
backends/lua/stdlib/: DynamoStdlib.hpp
dynamo/: CMakeLists.txt
dynamo/src/: CPPSerializer.cpp  FindGlobalsPass.hpp  LuaSerializer.cpp  main.cpp
runtimes/cpp/: CMakeLists.txt  DynamoRuntime.hpp  Test.cpp
